Makefile update compile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "consigne.h": "c",
         "regulation.h": "c",
         "visualisationc.h": "c",
-        "visualisationt.h": "c"
+        "visualisationt.h": "c",
+        "math.h": "c"
     }
 }
