working sim gene

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@
 .verrouConsigne
 .verrouData
 execute.exe
+usb.o
+main.o
+visualisationT.o
+visualisationC.o
+test_simulateur.o
+simulateur.o
+.gitignore
+Inc/simulateur.h.gch
+Inc/usb.h.gch
+Inc/simulateur.h.gch
+regulation.o
+consigne.o
+autotests.o
+Inc/define.h.gch
+Inc/simulateur.h.gch
+
+releve.o
+commande.o
